--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,15 +7,14 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* .Jersey {
+  font-family: 'Jersey';
+} */
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: 'Jersey';
+  src: url(./fonts/Jersey.ttf);
+}
+::-webkit-scrollbar {
+  display: none;
 }
