--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 ::-webkit-scrollbar {
      display: none;
 }
@@ -42,6 +43,11 @@ select{
 
 @layer base {
   :root {
+          --dark-background:#0d0d0d;
+          --second-dark-background:#111111;
+          --dark-highlight-glow:#c084fc;
+          --dark-borders:0, 0%, 18%;
+          --dark-buttons:#2e2e2e80;
           --background: 0 0% 100%;
           --foreground: 0 0% 3.9%;
           --card: 0 0% 100%;
@@ -69,25 +75,25 @@ select{
           --radius: 0.5rem;
      }
   .dark {
-          --background: 0 0% 3.9%;
+          --background: 240 10% 3.9%;
           --foreground: 0 0% 98%;
-          --card: 0 0% 3.9%;
+          --card: 240 10% 3.9%;
           --card-foreground: 0 0% 98%;
-          --popover: 0 0% 3.9%;
+          --popover: 240 10% 3.9%;
           --popover-foreground: 0 0% 98%;
           --primary: 0 0% 98%;
-          --primary-foreground: 0 0% 9%;
-          --secondary: 0 0% 14.9%;
+          --primary-foreground: 240 5.9% 10%;
+          --secondary: 240 3.7% 15.9%;
           --secondary-foreground: 0 0% 98%;
-          --muted: 0 0% 14.9%;
-          --muted-foreground: 0 0% 63.9%;
-          --accent: 0 0% 14.9%;
+          --muted: 240 3.7% 15.9%;
+          --muted-foreground: 240 5% 64.9%;
+          --accent: 240 3.7% 15.9%;
           --accent-foreground: 0 0% 98%;
           --destructive: 0 62.8% 30.6%;
           --destructive-foreground: 0 0% 98%;
-          --border: 0 0% 14.9%;
-          --input: 0 0% 14.9%;
-          --ring: 0 0% 83.1%;
+          --border: 240 3.7% 15.9%;
+          --input: 240 3.7% 15.9%;
+          --ring: 240 4.9% 83.9%;
           --chart-1: 220 70% 50%;
           --chart-2: 160 60% 45%;
           --chart-3: 30 80% 55%;
