--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,8 @@ select{
           --dark-background:#0d0d0d;
           --second-dark-background:#111111;
           --dark-highlight-glow:#c084fc;
-          --dark-borders:#292524;
+          /* --dark-borders:#292524; */
+          --dark-borders:#222;
           --dark-buttons:#2e2e2e80;
           --background: 0 0% 100%;
           --foreground: 0 0% 3.9%;
