--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,5 +124,9 @@ select{
      border-radius: 10px;
 }
 .Notification {
-     @apply absolute bottom-10 right-10 z-[1000] bg-gray-800 text-white p-4 rounded-md shadow-lg transition-opacity duration-300;
+     @apply fixed bottom-10 right-10 z-[1000] text-white p-4 rounded-md shadow-lg transition-opacity duration-300;
+}
+
+.error {
+     @apply bg-red-50 border-red-200 text-red-800;
 }
